add testes de performance 2 e 3

--- a/ (2).project
+++ b/ (2).project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tp desenvolvimento java</name>
+	<name>tp1 desenvolvimento java</name>
 	<comment></comment>
 	<projects>
 	</projects>
