--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/TP2.java=UTF-8
 encoding//src/dominio/Instituicao.java=UTF-8
+encoding//src/dominio/Professor.java=UTF-8
